Fix fonts on the blog
Have noticed the "T"s are very hard to read in Riesling font. As much as
I like it, it's not very pratical. In fact, it's a little gaudy. So I
think I'll remove it for now.
As a compromise, I'll add a new class for the riesling font that can be
added to text as and when needed.

--- a/app/assets/stylesheets/fonts.scss
+++ b/app/assets/stylesheets/fonts.scss
@@ -25,28 +25,31 @@
 }
 
 @mixin header-font() {
-  font-family: rieslingregular, Tahoma, sans-serif !important;
-  font-weight: normal;
+  font-family: rieslingregular, Tahoma, sans-serif;
 }
 
 @mixin main-font() {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Open Sans, Arial, Helvetica, sans-serif;
   color: $black;
 }
 
-h1, h2, h5, h6 {
-  @include header-font();
+h1, h2, h3, h4, h5, h6 {
   font-weight: bold;
 }
 
 h1 {
+  @include header-font();
   font-size: 3.7rem;
   line-height: 1.8rem
 }
 
+h2, h3, h4, h5, h6 {
+  @include main-font();
+}
+
 h2, h3 {
   font-size: 3.1rem;
-  line-height: 1.8rem !important;
+  line-height: 1.8rem;
   margin: 0;
 }
 
@@ -55,6 +58,10 @@ h2, h3 {
   a:hover {
     font-size: 2.3rem !important;
   }
+}
+
+.blog-title {
+  line-height: 2.8rem !important;
 }
 
 main {
@@ -79,4 +86,8 @@ small {
 
 .smaller_text {
   font-size: 0.8rem;
+}
+
+.riesling {
+  @include header-font();
 }
